# rrrocket

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
boxcapy/: rocket-plot.py
boxcapy/libboxcapy/: Cargo.toml
boxcapy/libboxcapy/src/: lib.rs
ci/: before_deploy.sh
src/: main.rs
tests/: it.rs
