[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
name = "rrrocket"
repository = "https://github.com/nickbabcock/boxcars"
version = "0.10.1"
publish = false
description = "Rocket League Replay parser to JSON CLI app"
edition = "2018"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
boxcars = "0.10.1"
glob = "0.3"
either = "1"
memmap2 = "0.9.5"

# Pin zip to avoid performance regressions
# https://github.com/zip-rs/zip2/pull/247#issuecomment-2541464228
zip = { version = "=2.1.3", default-features = false, features = ["deflate-zlib-ng"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
fs_extra = "1"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
