[package]
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
name = "rrrocket"
repository = "https://github.com/nickbabcock/boxcars"
version = "0.10.10"
publish = false
description = "Rocket League Replay parser to JSON CLI app"
edition = "2018"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.53", features = ["derive"] }
rayon = "1.11.0"
boxcars = "0.10.9"
glob = "0.3.3"
memmap2 = "0.9.9"
rawzip = "0.4.3"
libdeflater = "1.25.0"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.48"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
fs_extra = "1"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
